# 190x4-Ninety

./: .gitignore  LICENSE  README.en.md  README.md  README.ru.md  RELEASING.md  package.json
.github/workflows/: build.yml  checks.yml  dpi-channel.yml  engine-watch.yml
scripts/: gitlab_mirror.py  r2_mirror.py
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dpi/: engine-version.txt  gen_strategies.py  strategies.json  version.txt
src-tauri/icons/tray/: gen_tray_icons.py
src-tauri/src/: clash.rs  clash_stream.rs  dpi.rs  killswitch.rs  lib.rs  main.rs  netproc.rs  proxy_stub.rs  proxy_win.rs  quality.rs  scanner.rs  subscription.rs  tun_ipc.rs  tun_ipc_stub.rs  url_handler.rs  vpn.rs  warp.rs  wifi.rs
src-tauri/tunnel-svc/: Cargo.toml
src-tauri/tunnel-svc/src/: consts.rs  ipc.rs  logging.rs  main.rs  runner.rs  scm.rs  singbox.rs  tun_cleanup.rs
src-tauri/windows/: hooks.nsh  installer.nsi  license.rtf  license.txt  make_installer_bitmaps.py  make_license_rtf.py
src/lib/: add-modal.js  build-info.js  bus.js  clash-api.js  clash-stream.js  deeplink.js  dpi-view.js  edit-modal.js  esc.js  flags.js  hero-hud.js  ip-info.js  mesh-background.js  notify.js  options.js  proxies-view.js  quality-engine.js  quality-scope.js  routing-rules.js  routing-view.js  server-drawer.js  settings-view.js  share.js  singbox.js  subscriptions.js  toast.js  traffic-meter.js  update-modal.js  updater.js
src/lib/i18n/: ar.js  de.js  en.js  es.js  fa.js  fr.js  index.js  it.js  ja.js  ko.js  pl.js  pt.js  region-detect.js  ru.js  tr.js  uk.js  zh.js
src/styles/: about.css  add-modal.css  app.css  base.css  buttons.css  connect.css  dpi.css  edit-modal.css  glass.css  hero.css  location-card.css  logs.css  modals.css  motion-rm.css  nav-rail.css  notify-ui.css  popover.css  profiles.css  proxies-screen.css  proxies.css  qr-modal.css  quality-chip.css  routing.css  rtl.css  screen-header.css  screens.css  settings-extras.css  settings.css  sidebar.css  sub-card.css  theme.css  titlebar.css  tokens.css  toolbar.css  traffic-footer.css  update.css  world-map.css
tests/: builder.test.mjs  deeplink.test.mjs  esc.test.mjs  i18n.test.mjs  loader.mjs  parsers.test.mjs  register.mjs
