[package]
name = "ninety"
version = "0.1.9"
description = "Ninety — VPN client in 190x4 aesthetic"
authors = ["pathetixx"]
edition = "2021"

[lib]
name = "ninety_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json"] }
base64 = "0.22"
urlencoding = "2.1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Networking_WinInet",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
