[workspace]
members = ["."]
resolver = "2"

[package]
name = "ninety"
version = "0.1.66"
description = "Ninety — VPN client in 190x4 aesthetic"
authors = ["pathetixx"]
edition = "2021"

[lib]
name = "ninety_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "rt", "macros", "net", "io-util"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json"] }
base64 = "0.22"
# Проверка подписи канала стратегий (minisign — тот же ключ, что у OTA-апдейтера).
minisign-verify = "0.2"
# Распаковка подписанного бандла канала (после верификации байтов).
# Версия 4.x — та же, что уже в дереве (feature-унификация, без дубля в lock).
zip = { version = "4", default-features = false, features = ["deflate"] }
urlencoding = "2.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
# WG handshake (boringtun) — нужен для warp_scan_endpoints в WG-режиме.
# default-features = false убирает FFI bindings и device-loop, оставляет noise/Tunn.
boringtun = { version = "0.7", default-features = false }
# BLAKE2s для пересчёта MAC1 после подмены reserved (CF WARP client_id routing).
blake2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Networking_WinInet",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
